--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <span>R</span>
             <span>I</span>
             <span></span>
+            <span></span>
+            <span></span>
             <span>B</span>
             <span>A</span>
             <span>H</span>
@@ -55,6 +57,8 @@
             <span>A</span>
             <span></span>
             <span>&</span>
+            <span></span>
+            <span></span>
             <span></span>
             <span>S</span>
             <span>H</span>
