--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
     </div>
     <div class="pusying">
         <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-            <span> </span>
             <span>I</span>
             <span>S</span>
             <span>T</span>
             <span>R</span>
             <span>I</span>
-            <span> </span>
-            <span></span>
+            <span>y</span>
+            <span>g</span>
             <span>B</span>
             <span>A</span>
             <span>H</span>
@@ -57,9 +56,9 @@
             <span>A</span>
             <span> </span>
             <span></span>
-            <span></span>
-            <span>&</span>
-            <span> </span>
+            <span>d</span>
+            <span>a</span>
+            <span>n</span>
             <span>S</span>
             <span>H</span>
             <span>O</span>
