--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <span>T</span>
             <span>R</span>
             <span>I</span>
-            <span>y</span>
-            <span>g</span>
+    </div>
+    <div class="pusying1">
             <span>B</span>
             <span>A</span>
             <span>H</span>
@@ -48,7 +48,7 @@
     <div class="description">
         <span>dari</span>
     </div>
-    <div class="pusying1">
+    <div class="pusying">
         <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
             <span>K</span>
             <span>A</span>
@@ -56,15 +56,17 @@
             <span>A</span>
             <span> </span>
             <span></span>
-            <span>d</span>
-            <span>a</span>
-            <span>n</span>
-            <span>S</span>
-            <span>H</span>
-            <span>O</span>
-            <span>L</span>
-            <span>E</span>
-            <span>H</span>
+            <span></span>
+    </div>
+    <div class="pusying1">
+        <span>&</span>
+        <span></span>
+        <span>S</span>
+        <span>H</span>
+        <span>O</span>
+        <span>L</span>
+        <span>E</span>
+        <span>H</span>
     </div>
     <div class="button">
         <button>
