--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span>A</span>
     </div>
     <div class="description">
-        <span>dari</span>
+        <span>dari orang</span>
     </div>
     <div class="pusying">
         <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
